# fejemis_vision

./: CMakeLists.txt  README.md  package.xml  requirements.txt  thing.rviz
deep_learning/: classes.txt
launch/: cable_test.launch  camera.launch  main.launch  net_test.launch  people_test.launch
pyth/: cable_detection.py  cable_test.py  main.py  net_detection.py  net_test.py  people_detection_deep_sort.py  people_detection_depth_segmentation.py  people_detection_pose_segmentation.py  people_detection_simple_segmentation.py  people_test_basic.py
pyth/deepsort/tools/: generate_detections.py
pyth/net_test_images/: 1668424548.2913814_image.txt  1668424627.6888084_image.txt  1668424680.2463605_image.txt  1668424747.7935095_image.txt  1668428919.8831325_image.txt
pyth/utils/: convert_rostopic_to_imgs.py
